# deepbeam

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SimulationDataset.py  beamform_mic_array  beamformer.py  cmake_install.cmake  convlstm.py  locata.py  model.py  model2.py  model3.py  model4.py  model5.py  modelfinal.py  util.py  webrtc_beamform.cpp
cgmm_mvdr/: apply_online_beamformer.py  test.ipynb  test.py
cgmm_mvdr/libs/: beamformer.py
complexcnn/: modules.py
filterbank/: g-M16-m4-r1.pickle  h-M16-m4-r1.pickle
lib/: libportaudio.la  libportaudio.so.2.0.0  libsndfile.la  libsndfile.so.1.0.28
lib/pkgconfig/: portaudio-2.0.pc  sndfile.pc
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mvdr_test.cpp  webrtc_test  webrtc_test.cpp
